@@ -3,36 +3,6 @@ use Mojo::Base -strict;
 
 # "Professor: These old Doomsday devices are dangerously unstable. I'll rest
 #             easier not knowing where they are."
-use Mojo::Log;
-use Mojo::Transaction::HTTP;
-use Mojo::Util 'deprecated';
-
-# DEPRECATED!
-sub build_tx {
-  deprecated 'Mojo::build_tx is DEPRECATED in favor of Mojolicious::build_tx';
-  Mojo::Transaction::HTTP->new;
-}
-
-# DEPRECATED!
-sub config {
-  deprecated 'Mojo::config is DEPRECATED in favor of Mojolicious::config';
-  Mojo::Util::_stash(config => @_);
-}
-
-# DEPRECATED!
-sub log {
-  deprecated 'Mojo::log is DEPRECATED in favor of Mojolicious::log';
-  my $self = shift;
-  return $self->{log} unless @_;
-  $self->{log} = Mojo::Log->new // shift;
-  return $self;
-}
-
-# DEPRECATED!
-sub handler {
-  deprecated 'Mojo::handler is DEPRECATED in favor of Mojolicious::handler';
-}
-
 1;
 
 =encoding utf8
